--- a/index.html
+++ b/index.html
@@ -30,19 +30,35 @@
         gap: 8px;
       }
 
-      .dice {
-        cursor: pointer;
+      .diceBtn {
         width: 100%;
         max-width: 120px;
         border-radius: 12px;
-        background-color: #fff;
         border: 2px solid #d8dee7;
+        background: #fff;
+        padding: 6px;
+        cursor: pointer;
         justify-self: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 2px;
       }
 
-      .dice:hover {
+      .diceBtn:hover {
         border-color: #ff6b3d;
         transform: translateY(-2px);
+      }
+
+      .dice {
+        width: 72px;
+        height: 72px;
+      }
+
+      .diceLabel {
+        color: #3d4b63;
+        font-size: 13px;
+        font-weight: 700;
       }
 
       .control {
@@ -51,7 +67,7 @@
         margin: 16px 0;
       }
 
-      button {
+      .control button {
         background-color: #005f73;
         color: #fff;
         border-radius: 6px;
@@ -61,7 +77,7 @@
         border: none;
       }
 
-      button:disabled {
+      .control button:disabled {
         background-color: #8ca6ad;
         cursor: not-allowed;
       }
