--- a/index.html
+++ b/index.html
@@ -1,244 +1,379 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#10252d" />
     <title>DiceRecorder</title>
-
     <style>
+      :root {
+        --font-body: "Noto Sans TC", "PingFang TC", "Microsoft JhengHei", sans-serif;
+        --font-title: "Noto Serif TC", "PMingLiU", serif;
+        --bg-0: #091319;
+        --bg-1: #10252d;
+        --bg-2: #173844;
+        --panel: rgba(14, 28, 34, 0.78);
+        --panel-border: rgba(163, 205, 220, 0.18);
+        --text-main: #e9f6fb;
+        --text-sub: #b4ccd5;
+        --accent: #f7aa3a;
+        --accent-2: #36c6bb;
+        --danger: #ff6c63;
+        --small: #69d286;
+        --triple: #62acff;
+        --shadow: 0 14px 34px rgba(1, 7, 10, 0.45);
+      }
+
+      html {
+        color-scheme: dark;
+      }
+
       body {
-        font-family: sans-serif;
+        margin: 0;
+        min-height: 100vh;
+        font-family: var(--font-body);
+        color: var(--text-main);
+        background:
+          radial-gradient(circle at 12% -10%, #2a5666 0%, transparent 45%),
+          radial-gradient(circle at 92% 0%, #4f3e28 0%, transparent 36%),
+          linear-gradient(150deg, var(--bg-0), var(--bg-1) 60%, var(--bg-2));
         display: flex;
         justify-content: center;
+        padding: max(16px, env(safe-area-inset-top)) max(14px, env(safe-area-inset-right))
+          max(20px, env(safe-area-inset-bottom)) max(14px, env(safe-area-inset-left));
+        -webkit-tap-highlight-color: rgba(247, 170, 58, 0.24);
+      }
+
+      .skip-link {
+        position: absolute;
+        left: 16px;
+        top: -120px;
+        background: #041116;
+        color: #f2fcff;
+        padding: 10px 14px;
+        border-radius: 10px;
+        z-index: 100;
+        transition: top 0.2s ease;
+      }
+
+      .skip-link:focus-visible {
+        top: 12px;
+      }
+
+      .sr-only {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        padding: 0;
+        margin: -1px;
+        overflow: hidden;
+        clip: rect(0, 0, 0, 0);
+        white-space: nowrap;
+        border: 0;
       }
 
       .display {
-        position: relative;
-        top: 50px;
+        width: min(1120px, 100%);
+        display: grid;
+        gap: 16px;
       }
 
-      .dice {
-        cursor: pointer;
-        width: 128px;
-        height: 128px;
-        padding: 0;
-        margin: 5px;
-        border-radius: 15px;
-        background-color: white;
+      .appHeader {
+        background: linear-gradient(135deg, rgba(39, 75, 89, 0.64), rgba(20, 40, 49, 0.8));
+        border: 1px solid var(--panel-border);
+        border-radius: 22px;
+        box-shadow: var(--shadow);
+        padding: 18px 22px;
       }
-      .dice:hover {
-        background-color: orangered;
+
+      h1 {
+        font-family: var(--font-title);
+        margin: 0;
+        letter-spacing: 0.04em;
+        font-size: clamp(24px, 3vw, 36px);
+        text-wrap: balance;
+      }
+
+      .subtitle {
+        margin: 8px 0 0;
+        color: var(--text-sub);
+        font-size: 15px;
+      }
+
+      .playground {
+        background: var(--panel);
+        border: 1px solid var(--panel-border);
+        border-radius: 20px;
+        box-shadow: var(--shadow);
+        padding: 16px;
+      }
+
+      .playground h2 {
+        margin: 0;
+        font-size: 18px;
+      }
+
+      .dicePanel {
+        margin-top: 12px;
+        display: grid;
+        grid-template-columns: repeat(3, minmax(88px, 1fr));
+        gap: 10px;
+      }
+
+      .dice-btn {
+        all: unset;
+        box-sizing: border-box;
+        cursor: pointer;
+        touch-action: manipulation;
+        border-radius: 14px;
+        border: 1px solid rgba(172, 214, 228, 0.3);
+        background: linear-gradient(165deg, rgba(230, 247, 255, 0.15), rgba(190, 219, 230, 0.07));
+        min-height: 110px;
+        display: grid;
+        justify-items: center;
+        align-content: center;
+        gap: 6px;
+        transition: transform 0.12s ease, box-shadow 0.15s ease, border-color 0.15s ease;
+      }
+
+      .dice-btn:hover {
+        transform: translateY(-2px);
+        border-color: rgba(247, 170, 58, 0.68);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+      }
+
+      .dice-btn:active {
+        transform: translateY(0);
+      }
+
+      .dice-btn:focus-visible,
+      button:focus-visible {
+        outline: 3px solid rgba(247, 170, 58, 0.88);
+        outline-offset: 2px;
+      }
+
+      .dice-btn img {
+        width: 56px;
+        height: 56px;
+      }
+
+      .dice-value {
+        color: var(--text-sub);
+        font-size: 13px;
+        font-weight: 600;
+      }
+
+      .control {
+        margin-top: 14px;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+      }
+
+      .actionBtn {
+        border: none;
+        border-radius: 11px;
+        padding: 10px 14px;
+        color: var(--text-main);
+        font-weight: 700;
+        letter-spacing: 0.02em;
+        font-size: 14px;
+        cursor: pointer;
+        transition: transform 0.12s ease, filter 0.15s ease;
+        touch-action: manipulation;
+      }
+
+      .actionBtn:hover {
+        filter: brightness(1.1);
+        transform: translateY(-1px);
+      }
+
+      .actionBtn:active {
+        transform: translateY(0);
+      }
+
+      #btnUndo {
+        background: linear-gradient(135deg, #2f6d83, #2a4f66);
+      }
+
+      #btnReset {
+        background: linear-gradient(135deg, #7e3935, #512623);
+      }
+
+      .actionBtn:disabled {
+        opacity: 0.48;
+        cursor: not-allowed;
+        transform: none;
+        filter: none;
+      }
+
+      .resultPanel {
+        display: grid;
+        gap: 16px;
+        grid-template-columns: minmax(280px, 1fr) minmax(280px, 1.3fr);
+      }
+
+      .histories,
+      .probability {
+        background: var(--panel);
+        border: 1px solid var(--panel-border);
+        border-radius: 20px;
+        box-shadow: var(--shadow);
+        padding: 16px;
+        min-width: 0;
       }
 
       .histories {
-        font-size: 18pt;
+        font-size: 16px;
       }
-      .probability {
-        font-size: 14pt;
+
+      .historyList {
+        list-style: none;
+        margin: 10px 0 0;
+        padding: 0;
+        display: grid;
+        gap: 8px;
+        max-height: 70vh;
+        overflow: auto;
       }
-      .probability > div {
-        margin: 0.3em 0;
+
+      .historyList li {
+        line-height: 1.4;
+        border-radius: 10px;
+        padding: 8px 10px;
+        background: rgba(255, 255, 255, 0.02);
       }
 
       li.large {
-        color: red;
+        border-left: 4px solid var(--danger);
       }
+
       li.small {
-        color: green;
+        border-left: 4px solid var(--small);
       }
+
       li.sp {
-        color: blue;
+        border-left: 4px solid var(--triple);
       }
 
-      .resultPanel {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        gap: 1em;
+      .probability {
+        grid-column: 1 / -1;
+        font-size: 14px;
       }
 
-      button {
-        background-color: darkcyan;
-        color: white;
-        border-radius: 5px;
-        padding: 8px 20px;
-        cursor: pointer;
-        font-weight: bold;
-        border: none;
-      }
-      button:hover {
-        filter: brightness(120%);
+      .probability section {
+        border: 1px solid rgba(174, 212, 224, 0.16);
+        border-radius: 14px;
+        padding: 10px 12px;
+        margin-top: 10px;
+        background: rgba(255, 255, 255, 0.02);
       }
 
-      .control,
-      h2,
-      .resultPanel {
-        padding-left: 5px;
+      .probability section:first-child {
+        margin-top: 0;
       }
 
-      @media screen and (min-width: 800px) {
-        .display {
-          display: grid;
-          grid-template-rows: 3em 17em 1fr;
-          grid-template-areas:
-            "title ."
-            "dice result"
-            "control result";
-          gap: 1em;
-        }
-        h2 {
-          grid-area: title;
-        }
-        .dicePanel {
-          grid-area: dice;
-        }
-        .control {
-          grid-area: control;
-        }
+      .probability ul {
+        margin: 8px 0 0;
+        padding-left: 18px;
+      }
+
+      .probability li {
+        margin-bottom: 2px;
+      }
+
+      .sum-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+        gap: 4px 14px;
+        list-style: none;
+        padding: 0;
+        margin: 8px 0 0;
+      }
+
+      .meta-grid {
+        display: grid;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        gap: 6px 10px;
+      }
+
+      .mono {
+        font-variant-numeric: tabular-nums;
+      }
+
+      .empty {
+        color: var(--text-sub);
+        margin: 0;
+      }
+
+      @media screen and (max-width: 980px) {
         .resultPanel {
-          grid-area: result;
-          flex-direction: row-reverse;
-        }
-        .histories > ul {
-          margin: 0;
+          grid-template-columns: 1fr;
         }
       }
-      @media screen and (max-width: 450px) {
-        .dice {
-          width: 96px;
-          height: 96px;
-          box-shadow: inset 0 0 0 2px black;
+
+      @media screen and (max-width: 520px) {
+        .display {
+          gap: 12px;
+        }
+
+        .appHeader,
+        .playground,
+        .histories,
+        .probability {
+          padding: 12px;
+          border-radius: 16px;
+        }
+
+        .dicePanel {
+          grid-template-columns: repeat(3, minmax(72px, 1fr));
+          gap: 8px;
+        }
+
+        .dice-btn {
+          min-height: 94px;
+        }
+
+        .dice-btn img {
+          width: 48px;
+          height: 48px;
         }
       }
     </style>
-  <script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
+  </head>
   <body>
+    <a class="skip-link" href="#mainContent">跳到主要內容</a>
     <div class="display">
-      <h2>規則</h2>
-      <div class="dicePanel"></div>
-      <div class="control">
-        <button id="btnReset">Reset</button>
-      </div>
-      <div class="resultPanel">
-        <div class="histories"></div>
-        <div class="probability"></div>
+      <header class="appHeader">
+        <h1>骰子統計台</h1>
+        <p class="subtitle">點擊骰子輸入紀錄，統計會即時更新。可用 Undo 回退最新一筆。</p>
+      </header>
+
+      <main id="mainContent" class="resultPanel" aria-label="Dice Statistics Dashboard">
+        <section class="playground" aria-label="Roll Input Panel">
+          <h2>輸入區</h2>
+          <div class="dicePanel"></div>
+          <div class="control">
+            <button id="btnUndo" type="button" class="actionBtn" aria-label="撤銷最新一筆紀錄">
+              Undo Last
+            </button>
+            <button id="btnReset" type="button" class="actionBtn" aria-label="清空所有紀錄">
+              Reset
+            </button>
+          </div>
+        </section>
+
+        <section class="histories" aria-label="Roll History"></section>
+
+        <section class="probability" aria-label="Statistics"></section>
+      </main>
+
+      <div id="liveRegion" class="sr-only" aria-live="polite"></div>
+      <div class="sr-only" aria-live="polite" id="statusHint">
+        使用 Tab 可聚焦骰子按鈕，按 Enter 或空白鍵可輸入。
       </div>
     </div>
-
-    <script>
-      const dicePanel = document.querySelector(".dicePanel");
-      const historiesDiv = document.querySelector(".histories");
-      const probabilityDiv = document.querySelector(".probability");
-      let historiesList = [];
-
-      for (let i = 1; i <= 6; ++i) {
-        dicePanel.innerHTML += `<img class="dice" src="dice/dice${i}.png" alt="dice${i}" onclick="add(${i})">`;
-        if (i === 3) dicePanel.innerHTML += "<br/>";
-      }
-
-      if (localStorage.getItem("dice_history")) {
-        historiesList = JSON.parse(localStorage.getItem("dice_history"));
-        render();
-        renderProbability();
-      }
-
-      document.getElementById("btnReset").addEventListener("click", () => {
-        historiesList = [];
-        historiesDiv.innerHTML = "";
-        probabilityDiv.innerHTML = "";
-        localStorage.clear();
-      });
-
-      function add(num) {
-        let latest = historiesList[historiesList.length - 1];
-        if (!historiesList.length || latest.stage === 3) {
-          latest = {
-            first: num,
-            stage: 1,
-          };
-          historiesList.push(latest);
-        } else {
-          if (latest.stage === 1) {
-            latest.second = num;
-          } else {
-            latest.third = num;
-          }
-          latest.stage += 1;
-        }
-
-        render();
-        renderProbability();
-        localStorage.setItem("dice_history", JSON.stringify(historiesList));
-      }
-
-      function render() {
-        let output = "";
-        [...historiesList].reverse().forEach(({ first, second, third }) => {
-          let row = `<li><b>${first}</b>`;
-          if (second) row += ` <b>${second}</b>`;
-          if (third) {
-            row += ` <b>${third}</b>`;
-            const sum = first + second + third;
-            let res = sum > 10 ? "大" : "小";
-            if (first === second && second === third) {
-              res = "豹子";
-            }
-            row += ` ${res} ${sum}`;
-
-            switch (res) {
-              case "大":
-                row = row.replace("<li>", "<li class='large'>");
-                break;
-              case "小":
-                row = row.replace("<li>", "<li class='small'>");
-                break;
-              case "豹子":
-                row = row.replace("<li>", "<li class='sp'>");
-                break;
-            }
-          }
-          row += "</li>";
-          output += row;
-        });
-        historiesDiv.innerHTML += `<ul>${output}</ul>`;
-      }
-
-      function renderProbability() {
-        probabilityDiv.innerHTML = "";
-        const sumUp = [0, 0, 0, 0, 0, 0];
-        const resList = [0, 0, 0];
-
-        historiesList.forEach(({ first, second, third }) => {
-          sumUp[first - 1]++;
-          if (second) sumUp[second - 1]++;
-          if (third) {
-            sumUp[third - 1]++;
-
-            const sum = first + second + third;
-            if (first === second && second === third && first === 4) {
-              resList[2]++;
-            } else resList[sum > 10 ? 0 : 1]++;
-          }
-        });
-        const total = sumUp.reduce((pre, cur) => pre + cur, 0);
-
-        for (let i = 1; i <= 6; ++i) {
-          probabilityDiv.innerHTML += `<div><img src="dice/dice${i}.png" width="16" height="16"> <span>${
-            parseInt((10000 * sumUp[i - 1]) / total) / 100.0
-          }%</span></div>`;
-        }
-
-        probabilityDiv.innerHTML += `<div><span style="color:red">大</span> ${
-          parseInt((10000 * resList[0]) / total) / 100.0
-        }%</div>`;
-        probabilityDiv.innerHTML += `<div><span style="color:green">小</span> ${
-          parseInt((10000 * resList[1]) / total) / 100.0
-        }%</div>`;
-        probabilityDiv.innerHTML += `<div><span style="color:blue">圍</span> ${
-          parseInt((10000 * resList[2]) / total) / 100.0
-        }%</div>`;
-      }
-    </script>
-  <script type="text/javascript">(function(){window['__CF$cv$params']={r:'6d65aebcfeab5700',m:'eVlE.7OkgjZlMDpkCnsm.qQFPNl_SJnciB_hS6Z9SL0-1643660866-0-AW2r45447oBqhvpjXFdgonitKBCbjNzeK50Sd6JHJkOQm2hKMEXazRlwO9dZehyUwdFhedL+vjwf0y+oqpP3M9nKQ5ilqw55X0OlzNHKqknCmIQdAYjyWmeDhihS7va5Pc0hX9/o2iOjSyu+WnEsCEIMVMj57LUtzVexhvfZGUpjExBUY29cIEKPcVaUJ7kbYQ==',s:[0xafefa9e745,0x834c02967d],}})();</script></body>
+    <script type="module" src="./src/main.js"></script>
+  </body>
 </html>
