fix dice input buttons on static pages

--- a/index.html
+++ b/index.html
@@ -374,6 +374,6 @@
         使用 Tab 可聚焦骰子按鈕，按 Enter 或空白鍵可輸入。
       </div>
     </div>
-    <script type="module" src="./src/main.js"></script>
+    <script src="./src/main.js" defer></script>
   </body>
 </html>
